[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-photo-renamer"
version = "1.0.1"
description = "Rename photos and videos by location using GPS metadata"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "reverse_geocoder",
    "Pillow",
]

[project.optional-dependencies]
heic = ["pillow-heif"]

[project.scripts]
geo-rename = "geo_renamer.cli:main"
geo-update = "geo_renamer.cli:update"
geo-rename-update = "geo_renamer.cli:update"

[tool.setuptools.packages.find]
where = ["src"]
